SFUSA/force-app/main/default/objects/Sample_Kit__c/fields/Carrier__c.field-meta.xml
<CustomField>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>