SFUSA/force-app/main/default/objects/Sample_Kit__c/fields/Final_Email_Sent__c.field-meta.xml
<CustomField>
        <fullName>Final_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Email Sent?</label>
        <type>Checkbox</type>
    </CustomField>