SFUSA/force-app/main/default/objects/Sample_Kit__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
        <fullName>Tracking_Number__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>