SFUSA/force-app/main/default/objects/Sample_Kit__c/fields/Tracking_Number_Creation_Date__c.field-meta.xml
<CustomField>
        <fullName>Tracking_Number_Creation_Date__c</fullName>
        <label>Kit Delivery Date</label>
        <type>DateTime</type>
    </CustomField>