SFUSA/force-app/main/default/objects/Sample_Kit__c/fields/Tracking_URL__c.field-meta.xml
<CustomField>
        <fullName>Tracking_URL__c</fullName>
        <label>Tracking URL</label>
        <type>Url</type>
    </CustomField>