SFUSA/force-app/main/default/objects/Sample_Kit__c/validationRules/Restrict_Delivery_Status_from_None.validationRule-meta.xml
<ValidationRule>
        <fullName>Restrict_Delivery_Status_from_None</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISBLANK(Tracking_Number__c), ISBLANK(TEXT(Carrier__c))), ISCHANGED(Delivery_Status__c), ISBLANK(TEXT(PRIORVALUE(Delivery_Status__c))))</errorConditionFormula>
        <errorDisplayField>Delivery_Status__c</errorDisplayField>
        <errorMessage>Tracking Number and Carrier field values should not be empty.</errorMessage>
    </ValidationRule>